###################
Nagios Change Log
###################


2.0a1 - ??/??/????
------------------
* Added DURATION, DURATIONSEC, HOSTDOWNTIME, and SERVICEDOWNTIME macros
* Removed hostgroup escalations
* Added passive host checks
* Event handler commands can now contain arguments
* Contact notification commands can now contain arguments (Greg Vickers)
* Support for multiple members directives in hostgroup definitions
* Directory recursion support added to cfg_dir directives for object data
* Extended info can now be specified by directories with xedtemplate_config_dir
  directive (directory recursion is supported)
* Host check command can now contain arguments (! separator) (Daniel Riek)
* Removed support for "vanilla" command definitions (I doubt they were used)
* Added p1_file directive to main config file to specify location
  of p1.pl (Russell Scibetti)
* Added option to reload embedded Perl interpreter after X calls
  during runtime - useful if you notice embedded Perl leaking memory
* Removed older object config support
* Removed older extended info config support
* CGIs can now determine config file and external command file locations
  from environment variables (Russell Scibetti)
* Host and services use chained hash for faster lookups (Daniel Drown)
	###### CH may disappear from xodtemplate before release (not sure though)


1.0 - 11/24/2002
----------------
* Minor bug fixes in CGIs
* Minor bug fixes in sample config files
* Minor doc updates
* Minor bug fixes to init script
* Spec file updates
* Bug fix for flex host downtime
* Embedded perl bug fixe for arguments with spaces
* Host escalation logic fix
* Bug fix for PostgreSQL timestamps


1.0b6 - 09/15/2002
------------------
* Added wildcards and multiple hosts/hostgroups to host dependency
  and service dependency definitions
* Added wildcard support for members directive in hostgroup definitions
* Minor bug fixes and cleanups in CGIs
* Minor cleanups in the core
* Makefile fixes