@@ -238,6 +238,8 @@
 #define READ_HOSTDEPENDENCIES           1024
 #define READ_HOSTESCALATIONS            2048
 
+#define CACHE_OBJECT_DATA               4096    /* used by daemon only */
+
 #define READ_ALL_OBJECT_DATA            READ_HOSTS | READ_HOSTGROUPS | READ_CONTACTS | READ_CONTACTGROUPS | READ_SERVICES | READ_COMMANDS | READ_TIMEPERIODS | READ_SERVICEESCALATIONS | READ_SERVICEDEPENDENCIES | READ_HOSTDEPENDENCIES | READ_HOSTESCALATIONS
 
 
