@@ -2,7 +2,7 @@
  *
  * Nagios Locations Header File
  * Written By: Ethan Galstad (nagios@nagios.org)
- * Last Modified: 12-03-2002
+ * Last Modified: 12-06-2002
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -34,6 +34,6 @@
 #define DEFAULT_URL_CGIBIN_PATH			"@cgiurl@"
 #define DEFAULT_CGI_CONFIG_FILE			"@sysconfdir@/cgi.cfg"
 #define DEFAULT_LOCK_FILE			"@lockfile@"
-#define DEFAULT_OBJECT_CACHE_FILE		"@localstatedir/objects.cache"
+#define DEFAULT_OBJECT_CACHE_FILE		"@localstatedir@/objects.cache"
 #define DEFAULT_P1_FILE				"@bindir@/p1.pl"	/**** EMBEDDED PERL ****/
 #define DEFAULT_AUTH_FILE			""			/**** EMBEDDED PERL - IS THIS USED? ****/
