@@ -5,6 +5,8 @@ Nagios Change Log
 
 2.0a1 - ??/??/????
 ------------------
+* Added object_cache_file directive to allow CGI to read cached copy of
+  object definitions
 * Added DURATION, DURATIONSEC, HOSTDOWNTIME, and SERVICEDOWNTIME macros
 * Removed hostgroup escalations
 * Added passive host checks
